# employees-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose-dev.yaml  pyproject.toml
db_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--3786415731259850106.wt  collection-2--3786415731259850106.wt  collection-7--3786415731259850106.wt  index-1--3786415731259850106.wt  index-3--3786415731259850106.wt  index-8--3786415731259850106.wt  sizeStorer.wt
db_data/diagnostic.data/: metrics.2023-10-31T16-39-12Z-00000  metrics.interim
src/: __main__.py
src/api/: __init__.py  main.py
src/api/controllers/: __init__.py  default.py  employees.py
src/api/dependencies/: __init__.py  services.py
src/api/shcemas/: __init__.py  employee.py
src/core/: __init__.py
src/core/dto/: __init__.py  employee.py
src/core/enums/: __init__.py  gender.py
src/core/services/: __init__.py  employees.py
src/core/utils/: __init__.py  constants.py  filters.py  responses.py
src/infrastructure/: __init__.py
src/infrastructure/common/: __init__.py  settings.py
src/infrastructure/db/: __init__.py  db_conf.py
src/infrastructure/db/dao/: __init__.py  employee.py
src/infrastructure/db/models/: employees.py
